--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pygold/new-project",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A blank schematics",
   "scripts": {
     "build": "tsc -p tsconfig.json",
@@ -9,7 +9,7 @@
   "keywords": [
     "schematics"
   ],
-  "author": "",
+  "author": "pygold@gmail.com",
   "license": "MIT",
   "schematics": "./src/collection.json",
   "dependencies": {
